# pysigslot

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pysigslot/: __init__.py
tests/: test_signal.py
